Added mcp chatbot

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,10 @@
 # Free tier: 250 requests/day
 
 FMP_API_KEY=Wi3awLv3qol84MTsx62udVkYQMM7b7X4
+
+# OpenAI API Configuration (Optional - for AI chatbot)
+# Get your API key from: https://platform.openai.com/api-keys
+# Set this to enable context-aware AI responses in the chatbot
+
+OPENAI_API_KEY=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
+OPENAI_MODEL=gpt-4o
