feat: Add new static pages and local development scripts, and enhance AI assistant capabilities with chat history.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,22 @@
 {
     "rewrites": [
         {
+            "source": "/about",
+            "destination": "/about.html"
+        },
+        {
+            "source": "/privacy",
+            "destination": "/privacy.html"
+        },
+        {
+            "source": "/terms",
+            "destination": "/terms.html"
+        },
+        {
+            "source": "/contact",
+            "destination": "/contact.html"
+        },
+        {
             "source": "/blog",
             "destination": "/blog.html"
         },
