refactor: Migrate blog post URLs to relative paths, refactor styling with CSS variables, update author information, and add live article styles.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -28,5 +28,12 @@
             "source": "/(.*)",
             "destination": "/index.html"
         }
+    ],
+    "redirects": [
+        {
+            "source": "/",
+            "destination": "/blog",
+            "permanent": false
+        }
     ]
 }
